Move typescript-brunch to devDependencies

--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "css-brunch": "^2.0.0",
     "uglify-js-brunch": "^2.0.0",
     "clean-css-brunch": "^2.0.0",
-    "auto-reload-brunch": "^2.0.0"
-  },
-  "dependencies": {
+    "auto-reload-brunch": "^2.0.0",
     "brunch-typescript": "^2.0.0"
   }
 }
